--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,3 +4,50 @@ body{
     font-family: Montserrat, sans-serif;
     color: #444;
 }
+
+/*------------------------------------------------------------Beloved Images*/
+#impact-img{
+    display: block;
+    background-size:cover; 
+    background-position: center center;   
+    width: 85%;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+/*------------------------------------------------------------Navbar*/
+.logo{
+    margin: 0 auto;
+
+}
+.container-fluid{
+    padding: 0;
+    background-color: rgba(240, 240, 240, 0.151);
+}
+
+.navbar{
+     -webkit-box-shadow: 0px 0px;
+    box-shadow: 0px 0px;
+    background-color: rgba(240,240,240,0.7);
+    padding: 10px 0;
+    
+}
+
+
+
+
+/*-------------------------------------------------------------Text*/
+
+#pres-par {
+    text-align: center;
+    font-family: Oswald,sans-serif;
+    padding: 25px  10px;
+    letter-spacing: 0px;
+    text-transform: none;
+}
+.pres-chi {
+    font-family: Montserrat, sans-serif;
+    padding: 0 20px;
+    text-align: center;
+    font-weight: 500;
+}
