started Menu&Delivery, moved content from aboutus to menu

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -28,6 +28,11 @@ body{
     display: block;
     margin:0 auto ;
 }
+.differs{
+    height: 400px;
+    width: 400px;
+
+}
 
 /*------------------------------------------------------------Navbar*/
 .logo{
