--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@500&family=Oswald:wght@500&display=swap');
+
+
+
+
 body{
     font-family: Montserrat, sans-serif;
     color: #444;
@@ -70,6 +74,13 @@ body{
     margin-right: auto;
     max-height: auto;
 }
+#aboutimg{
+    display: block;   
+    width: 85%;
+    margin-left: auto;
+    margin-right: auto;
+    max-height: auto;
+}
 /*.imgdiv{
     width: 85%;
     height: 100vh;
@@ -132,6 +143,7 @@ h4  {
     background-clip: text;
    -webkit-text-fill-color:transparent;
 }
+
 .first-h{
     font-size: 2.2em;
     font-weight: 500;
@@ -156,15 +168,18 @@ h4  {
    -webkit-text-fill-color:transparent;
     font-family: 'Oswald', sans-serif; ;
     text-transform:uppercase;
-    margin:20px 0;
+    padding:20px 0;
     font-size: 3em;
 }
 /*-------------------------------------------------------------Media-Queries*/
 
 @media screen and (max-width: 600px) {
-  .first-h{
-      margin:10px 30px;
-  }
+
+  
+  .first-h i{
+    display: table;
+    margin: 0 auto !important;
+}
   #so-fresh{
       float:none;
       text-align: center;
@@ -186,18 +201,16 @@ h4  {
       text-align: center;
       margin-top: 25px;
   }
+
   #takeaw{
-      margin-left: 75px;
-      
-      width:100%;
+      display: block;
+      width:80%;
   }
   .sochild{
       clear: both;
       display: table;
   }
-  .first-h{
-      margin-left: 75px !important;
-  }
+  
   .differs{
       margin: 15px 80px;
   }
@@ -207,15 +220,9 @@ h4  {
     font-family: Montserrat, sans-serif;
     font-weight: 600
   }
-  .checkall{
-      margin-left: 150px;
-  }
-  .menu1{
-      margin-left: 150px;
-
-  }
   
 }
+
 @media screen and (max-width: 950px) {
     #so-fresh{
       float:none;
@@ -238,10 +245,15 @@ h4  {
     #ourstory{
       margin-top: 25px;
   }
+  .ourow{
+        position: relative;
+        width: 80%;
+        margin: 0 auto !important;
+    }
+
   .first-h{
       margin:10px 30px;
   }
-  /*----------------------------------------------Footer*/
   #definitive{
 		font: bold 14px sans-serif;
 	}
@@ -249,6 +261,7 @@ h4  {
 	#definitive .order,
 	#definitive .space,
 	#definitive .so-child{
+        clear: both;
 		display: block;
 		width: 100%;
 		margin-bottom: 10px;
@@ -267,20 +280,33 @@ h4  {
     }
 }
 
+
 @media screen and (min-width: 1200px){
     #impact-img{
-        width: 85%;
-        height: 100vh !important;
+        width: 80%;
+        height: 120vh !important;
     }
     .pres-chi{
-        width:85%;
+        width:80%;
+    }
+    
+    #takeaw{
+        width: 80%;
+        height:120vh;
+    }
+
+    /*---------------------------------------------------------About-Us*/
+    #aboutimg{
+        width: 80%;
+        height: 120vh !important;
+    }
+    .ourow{
+        position: relative;
+        width: 80%;
+        margin: 0 auto !important;
     }
     .quotes{
-        width:85%;
-    }
-    #takeaw{
-        width: 85%;
-        height:100vh;
+        width:80%;
     }
 
 }
