--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,346 +1,382 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@500&family=Oswald:wght@500&display=swap');
-
-
-
-
-body{
-    font-family: Montserrat, sans-serif;
-    color: #444;
+body {
+	font-family: Montserrat, sans-serif;
+	color: #444;
 }
-.row{
-    margin-left: 0 !important;
-    margin-right: 0 !important;
+
+.row {
+	margin-left: 0 !important;
+	margin-right: 0 !important;
 }
 
 
 /*------------------------------------------------------------Navbar*/
-.logo{
-    margin: 0 auto;
 
-}
-.container-fluid{
-    padding: 0;
-    background-color: rgba(240, 240, 240, 0.151);
+.logo {
+	margin: 0 auto;
 }
 
-.navbar{
-     -webkit-box-shadow: 0px 0px;
-    box-shadow: 0px 0px;
-    background-color: rgba(240,240,240,0.7);
-    padding: 10px 0;
-    
-}
-.active{
-    color: #000;
+.container-fluid {
+	padding: 0;
+	background-color: rgba(240, 240, 240, 0.151);
 }
 
-.nav-colored { 
-    background-color:#fff; 
+.navbar {
+	-webkit-box-shadow: 0px 0px;
+	box-shadow: 0px 0px;
+	background-color: rgba(240, 240, 240, 0.7);
+	padding: 10px 0;
 }
-.nav-transparent { 
-    background-color:rgba(255,255,255,0.6);
+
+.active {
+	color: #000;
 }
+
+.nav-colored {
+	background-color: #fff;
+}
+
+.nav-transparent {
+	background-color: rgba(255, 255, 255, 0.6);
+}
+
+
 /*------------------------------------------------------------Beloved Images*/
-#impact-img{
-    display: block;
-    background-size:cover; 
-    background-position: center center;   
-    width: 85%;
-    margin-left: auto;
-    margin-right: auto;
+
+#impact-img {
+	display: block;
+	background-size: cover;
+	background-position: center center;
+	width: 85%;
+	margin-left: auto;
+	margin-right: auto;
 }
 
-#so-fresh{
-    vertical-align: middle;
-    border-style: none;
-    max-width: 90%;
-    max-height: 500px;
+#so-fresh {
+	vertical-align: middle;
+	border-style: none;
+	max-width: 90%;
+	max-height: 500px;
 }
-#team-img{
-    display: block;
-    margin:0 auto ;
+
+#team-img {
+	display: block;
+	margin: 0 auto;
 }
-.differs{
-    height: 400px;
-    width: 400px;
-    margin-right: 25px;
-    margin-left:25px;
-    
+
+.differs {
+	height: 400px;
+	width: 400px;
+	margin-right: 25px;
+	margin-left: 25px;
 }
-#takeaw{
-    display: block;   
-    width: 85%;
-    margin-left: auto;
-    margin-right: auto;
-    max-height: auto;
+
+#takeaw {
+	display: block;
+	width: 85%;
+	margin-left: auto;
+	margin-right: auto;
+	max-height: auto;
 }
-#about{
-    display: block;   
-    width: 85%;
-    margin-left: auto;
-    margin-right: auto;
-    max-height: auto;
+
+#about {
+	display: block;
+	width: 85%;
+	margin-left: auto;
+	margin-right: auto;
+	max-height: auto;
 }
+
+
 /*.imgdiv{
     width: 85%;
     height: 100vh;
 
 }*/
-.delyop{
-    height: 500px;
-    width: 500px;
-    margin-right: 25px;
-    margin-left:25px;
-    
-}
-#checkall{
-    margin: 40px auto;
+
+.delyop {
+	height: 500px;
+	width: 500px;
+	margin-right: 25px;
+	margin-left: 25px;
 }
 
-#girly{
-    margin: 0 auto;
+#checkall {
+	margin: 40px auto;
 }
+
+#girly {
+    display: block;
+    width: 85%;
+	margin: 0 auto;
+}
+
 
 /*-------------------------------------------------------------Text*/
+
 h1,
 h2,
 h3,
-h4  {
-    color: #000;
-    margin-bottom: .5rem;
-    font-weight: 500;
-    line-height: 1.2;
-    text-align: center;
-    font-family: Oswald,sans-serif;
-    padding: 25px 10px;
-    letter-spacing: 0px;
-    text-transform: none;
-
+h4 {
+	color: #000;
+	margin-bottom: .5rem;
+	font-weight: 500;
+	line-height: 1.2;
+	text-align: center;
+	font-family: Oswald, sans-serif;
+	padding: 25px 10px;
+	letter-spacing: 0px;
+	text-transform: none;
 }
 
 #pres-par {
-    text-align: center;
-    font-family: Oswald,sans-serif;
-    padding: 25px  10px;
-    letter-spacing: 0px;
-    text-transform: none;
+	text-align: center;
+	font-family: Oswald, sans-serif;
+	padding: 25px 10px;
+	letter-spacing: 0px;
+	text-transform: none;
 }
+
 .pres-chi {
-    margin: 20px auto;
-    width: 85%;
-    font-family: Montserrat, sans-serif;
-    text-align: center;
-    font-weight: 500;
-}
-.position{
-    margin: auto;
-}
-.quotes{
-    margin-left: auto;
-    width: 85%;
-    margin-right: auto;}
-
-.icon{
-    size: 2em;
-    background:-moz-linear-gradient(top, #ec1123 40%,#f88629 75%); 
-    background: -webkit-linear-gradient(top, #ec1123 40%,#f88629 75%); 
-    background: linear-gradient(to bottom, #ec1123 40%,#f88629 75%);
-    -webkit-background-clip: text;
-    -moz-background-clip: text;
-    background-clip: text;
-   -webkit-text-fill-color:transparent;
+	margin: 20px auto;
+	width: 85%;
+	font-family: Montserrat, sans-serif;
+	text-align: center;
+	font-weight: 500;
 }
 
-.first-h{
-    font-size: 2.2em;
-    font-weight: 500;
-    font-family: Oswald, sans-serif;
-    letter-spacing: 2px;
-    margin: 40px 0;
-
-}
-.monty{
-    margin-top: 20px;
-    font-family: Montserrat, sans-serif;
-    font-weight: 600;
+.position {
+	margin: auto;
 }
 
-.menu1{
-    background:-moz-linear-gradient(top, #e69f51 40%,#d14046 75%); 
-    background: -webkit-linear-gradient(top, #e69f51 40%,#d14046 75%); 
-    background: linear-gradient(to bottom, #e69f51 40%,#d14046 75%);
-    -webkit-background-clip: text;
-    -moz-background-clip: text;
-    background-clip: text;
-   -webkit-text-fill-color:transparent;
-    font-family: 'Oswald', sans-serif; ;
-    text-transform:uppercase;
-    padding:20px 0;
-    font-size: 3em;
+.quotes {
+	margin-left: auto;
+	width: 85%;
+	margin-right: auto;
 }
+
+.icon {
+	size: 2em;
+	background: -moz-linear-gradient(top, #ec1123 40%, #f88629 75%);
+	background: -webkit-linear-gradient(top, #ec1123 40%, #f88629 75%);
+	background: linear-gradient(to bottom, #ec1123 40%, #f88629 75%);
+	-webkit-background-clip: text;
+	-moz-background-clip: text;
+	background-clip: text;
+	-webkit-text-fill-color: transparent;
+}
+
+.first-h {
+	font-size: 2.2em;
+	font-weight: 500;
+	font-family: Oswald, sans-serif;
+	letter-spacing: 2px;
+	margin: 40px 0;
+}
+
+.monty {
+	margin-top: 20px;
+	font-family: Montserrat, sans-serif;
+	font-weight: 600;
+}
+
+.menu1 {
+	background: -moz-linear-gradient(top, #e69f51 40%, #d14046 75%);
+	background: -webkit-linear-gradient(top, #e69f51 40%, #d14046 75%);
+	background: linear-gradient(to bottom, #e69f51 40%, #d14046 75%);
+	-webkit-background-clip: text;
+	-moz-background-clip: text;
+	background-clip: text;
+	-webkit-text-fill-color: transparent;
+	font-family: 'Oswald', sans-serif;
+	;
+	text-transform: uppercase;
+	padding: 20px 0;
+	font-size: 3em;
+}
+
+
 /*-------------------------------------------------------------Media-Queries*/
 
 @media screen and (max-width: 600px) {
-  
-  .first-h i{
-      padding: 0 0;
-    display: table;
-    margin: 0 auto !important;
-}
-  #so-fresh{
-      float:none;
-      text-align: center;
-      margin: 0 auto;
-      -webkit-float:none;
-      -webkit-text-align: center;
-      -webkit-margin: 0 auto;
-      -moz-float:none;
-      -moz-text-align: center;
-      -moz-margin: 0 auto;
-      -o-float:none;
-      -o-text-align: center;
-      -o-margin: 0 auto;
-  }
-  #mt-creaty{
-       margin-top: 0 !important;
-   }
-  #ourstory{
-      text-align: center;
-      margin-top: 25px;
-  }
-
-  #takeaw{
-      display: block;
-      width:85%;
-  }
-  .delyop{
-      width:85%;
-      height: auto;
-      margin: 0 auto !important;
-  }
-  .differs{
-      height: auto;
-      width: 85%;
-      margin-right: 0 auto !important;
-      margin-left:0 auto !important;
-    
-}
-#checkall{
-    padding: 40px 0 !important;
-}
-
-  .sochild{
-      clear: both;
-      display: table;
-  }
-  .order{
-      margin: 0 auto !important;
-  }
-  
-  .monty{
-      font-size: 1.4em;
-      font-family: Montserrat, sans-serif;
-      font-weight: 600
-  }
-  
+    .navbar{
+        padding: 0;
+    }
+	.first-h i {
+		padding: 0 0;
+		display: table;
+		margin: 0 auto !important;
+	}
+	#so-fresh {
+		float: none;
+		text-align: center;
+		margin: 0 auto;
+		-webkit-float: none;
+		-webkit-text-align: center;
+		-webkit-margin: 0 auto;
+		-moz-float: none;
+		-moz-text-align: center;
+		-moz-margin: 0 auto;
+		-o-float: none;
+		-o-text-align: center;
+		-o-margin: 0 auto;
+	}
+	#mt-creaty {
+		margin-top: 0 !important;
+	}
+	#ourstory {
+		text-align: center;
+		margin-top: 25px;
+	}
+	#takeaw {
+		display: block;
+		width: 85%;
+	}
+	.delyop {
+		width: 85%;
+		height: auto;
+		margin: 0 auto !important;
+	}
+	.differs {
+		height: auto;
+		width: 85%;
+		margin-right: 0 auto !important;
+		margin-left: 0 auto !important;
+	}
+    #girly {
+        display: block;
+		height: auto;
+		width: 85%;
+	}
+	#checkall {
+		padding: 40px 0 !important;
+	}
+	.sochild {
+		clear: both;
+		display: table;
+	}
+	.order {
+		margin: 0 auto !important;
+	}
+	.monty {
+		font-size: 1.4em;
+		font-family: Montserrat, sans-serif;
+		font-weight: 600
+	}
 }
 
 @media screen and (max-width: 950px) {
-    #so-fresh{
-      float:none;
-      text-align: center;
-      margin: 0 auto;
-      -webkit-float:none;
-      -webkit-text-align: center;
-      -webkit-margin: 0 auto;
-      -moz-float:none;
-      -moz-text-align: center;
-      -moz-margin: 0 auto;
-      -o-float:none;
-      -o-text-align: center;
-      -o-margin: 0 auto;  
-}
-   #override{
-       margin-bottom: 0 !important;
-       margin-top: 15px;
-   }
-    #ourstory{
-      margin-top: 25px;
-  }
-  .ourow{
-        position: relative;
-        width: 80%;
-        margin: 0 auto !important;
-    }
-
-  #definitive{
+	#so-fresh {
+		float: none;
+		text-align: center;
+		margin: 0 auto;
+		-webkit-float: none;
+		-webkit-text-align: center;
+		-webkit-margin: 0 auto;
+		-moz-float: none;
+		-moz-text-align: center;
+		-moz-margin: 0 auto;
+		-o-float: none;
+		-o-text-align: center;
+		-o-margin: 0 auto;
+	}
+	#override {
+		margin-bottom: 0 !important;
+		margin-top: 15px;
+	}
+	#ourstory {
+		margin-top: 25px;
+	}
+	.ourow {
+		position: relative;
+		width: 80%;
+		margin: 0 auto !important;
+	}
+	#definitive {
 		font: bold 14px sans-serif;
 	}
-
 	#definitive .order,
 	#definitive .space,
-	#definitive .so-child{
-        clear: both;
+	#definitive .so-child {
+		clear: both;
 		display: block;
 		width: 100%;
 		margin-bottom: 10px;
 		text-align: center;
 	}
-
-	#definitive .space i{
+	#definitive .space i {
 		margin-left: 0;
 	}
-    #moreto{
-        float: none !important;
-        text-align: center;
-    }
-    .footer-company-name{
-        text-align: center;
+	#moreto {
+		float: none !important;
+		text-align: center;
+	}
+	.footer-company-name {
+		text-align: center;
+	}
+    #floater{
+        float: bottom;
     }
 }
+@media screen and (max-width: 1024px) {
+    .delyop{
+        height: 495px;
+        width: 495px;
+        margin-left: 0;
+        margin-right: 0;
 
-
-@media screen and (min-width: 1200px){
-    #impact-img{
-        width: 80%;
-        height: 120vh !important;
-    }
-    .pres-chi{
-        width:80%;
-    }
-    
-    #takeaw{
-        width: 80%;
-        height:120vh;
     }
 
-    /*---------------------------------------------------------About-Us*/
-    #about{
-        width: 85%;
-        height: 120vh !important;
-    }
-    .ourow{
-        position: relative;
-        width: 80%;
-        margin: 0 auto !important;
-    }
-    .quotes{
-        width:80%;
-    }
-    /*---------------------------------------------------------Contact*/
-    #girly{
-        display: block;
-        width: 85%;
-        height: 120vh;
-    }
 
 }
+
+@media screen and (min-width: 1200px) {
+	#impact-img {
+		width: 85%;
+		height: auto;
+	}
+	.pres-chi {
+		width: 85%;
+	}
+	#takeaw {
+		width: 85%;
+		height: auto;
+	}
+    .differs{
+    padding: 0;
+    height: 400px;
+    width: 400px;
+    margin-right: 25px;
+    margin-left: 15px;
+    }
+	/*---------------------------------------------------------About-Us*/
+	#about {
+		width: 85%;
+		height: auto;
+	}
+	.ourow {
+		position: relative;
+		width: 80%;
+		margin: 0 auto !important;
+	}
+	.quotes {
+		width: 80%;
+	}
+	/*---------------------------------------------------------Contact*/
+	#girly {
+		display: block;
+		width: 85%;
+		height: auto;
+	}
+}
+
 
 /*-------------------------------------------------------------Footer*/
-#definitive{
-    margin-right:0 !important;
-    margin-bottom: 0 !important;
-    background-color: #666;
+
+#definitive {
+	margin-right: 0 !important;
+	margin-bottom: 0 !important;
+	background-color: #666;
 	box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.12);
 	box-sizing: border-box;
 	width: 100%;
@@ -348,31 +384,32 @@ h4  {
 	font: bold 16px sans-serif;
 }
 
+
 /*-------------------------------------------------------------Footer-left*/
 
-.order{
-	color:  #ffffff;
+.order {
+	color: #ffffff;
 	margin: 20px 0 12px;
 	padding: 10px;
 }
 
-.order a{
-	display:inline-block;
+.order a {
+	display: inline-block;
 	line-height: 1.8;
-    font-weight:400;
+	font-weight: 400;
 	text-decoration: none;
-	color:  inherit;
+	color: inherit;
 }
-.footer-company-name{
-    padding: 10px;
+
+.footer-company-name {
+	padding: 10px;
 }
 
 
 /*---------------------------------------------------------Footer-center */
 
-
-.space i{
-	background-color:  #33383b;
+.space i {
+	background-color: #33383b;
 	color: #ffffff;
 	font-size: 25px;
 	width: 38px;
@@ -384,17 +421,18 @@ h4  {
 	vertical-align: middle;
 }
 
-.space a{
-	color:  lightseagreen;
+.space a {
+	color: lightseagreen;
 	text-decoration: none;
 }
 
+
 /*-------------------------------------------------------------Footer-bottom*/
 
-.sochild{
-    margin-top: 15px;
-    font-size: 40px;
-    display: inline-block;
+.sochild {
+	margin-top: 15px;
+	font-size: 40px;
+	display: inline-block;
 	width: 35px;
 	height: 35px;
 	cursor: pointer;
@@ -404,11 +442,4 @@ h4  {
 }
 
 
-
-
-
-
-
-
 /* If you don't want the footer to be responsive, remove these media queries */
-
