--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -84,7 +84,6 @@ body {
 	width: 85%;
 	margin-left: auto;
 	margin-right: auto;
-	max-height: auto;
 }
 
 #about {
@@ -92,7 +91,6 @@ body {
 	width: 85%;
 	margin-left: auto;
 	margin-right: auto;
-	max-height: auto;
 }
 
 .delyop {
@@ -154,7 +152,6 @@ h4 {
 }
 
 .icon {
-	size: 2em;
 	background: -moz-linear-gradient(top, #ec1123 40%, #f88629 75%);
 	background: -webkit-linear-gradient(top, #ec1123 40%, #f88629 75%);
 	background: linear-gradient(to bottom, #ec1123 40%, #f88629 75%);
@@ -272,8 +269,7 @@ h4 {
 	.differs {
 		height: auto;
 		width: 90%;
-		margin-right: 0 auto !important;
-		margin-left: 0 auto !important;
+		margin: 0 auto !important;
 	}
 	#girly {
 		display: block;
