--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -68,8 +68,9 @@ body {
 	display: block;
 	margin: 0 auto 20px auto;
 }
-.rounded-circle{
-    margin-bottom: 15px;
+
+.rounded-circle {
+	margin-bottom: 15px;
 }
 
 .differs {
@@ -150,10 +151,12 @@ h4 {
 	width: 85%;
 	margin-right: auto;
 }
+
+
 /* code taken from https://www.lambdatest.com/blog/complete-guide-to-cross-browser-compatible-css-gradients/*/
+
 .icon {
 	color: red;
-
 }
 
 .first-h {
@@ -171,7 +174,7 @@ h4 {
 }
 
 .menu1 {
-	color:red;
+	color: red;
 	font-family: 'Oswald', sans-serif;
 	text-transform: uppercase;
 	padding: 20px 0;
@@ -191,6 +194,12 @@ h4 {
 
 
 /*-------------------------------------------------------------Media-Queries*/
+
+@media screen and (max-width: 380px) {
+	#girly {
+		height: 260px !important;
+	}
+}
 
 @media screen and (max-width: 600px) {
 	.navbar {
@@ -232,7 +241,7 @@ h4 {
 		width: 90%;
 		margin-left: auto;
 		margin-right: auto;
-		height: 270px;
+		height: 260px;
 	}
 	#team-img {
 		padding: 0 !important;
@@ -258,6 +267,7 @@ h4 {
 		margin: 0 auto !important;
 	}
 	#girly {
+		height: 300px;
 		display: block;
 		width: 90%;
 	}
@@ -335,14 +345,9 @@ h4 {
 		margin-bottom: 10px;
 		text-align: center;
 	}
-	#moreto {
-		float: none !important;
-		text-align: center;
-	}
+	.spice,
+	.grid,
 	.footer-company-name {
-		text-align: center;
-	}
-	#grid {
 		text-align: center;
 	}
 }
@@ -361,8 +366,11 @@ h4 {
 		margin: 0 auto !important;
 		width: 85%;
 	}
-	#grid {
-		display: grid;
+	.grid {
+		display: inline-block;
+	}
+	div .footer-company-name {
+		float: right;
 	}
 }
 
@@ -419,6 +427,34 @@ h4 {
 	}
 }
 
+@media screen and (min-width: 1366px) and (max-height: 1012px) {
+	#impact-img {
+		height: 100vh;
+		width: 80%;
+	}
+	.pres-chi {
+		width: 80%;
+	}
+	.pc {
+		width: 80%;
+	}
+	#about {
+		height: 100vh;
+		width: 80%;
+	}
+	#takeaw {
+		height: 100vh;
+		width: 80%;
+	}
+	.delyop {
+		width: 64% !important;
+	}
+	#girly {
+		height: 100vh;
+		width: 80%;
+	}
+}
+
 
 /*-------------------------------------------------------------Footer inspired by https://azmind.com/bootstrap-footer-templates/*/
 
@@ -434,34 +470,9 @@ h4 {
 }
 
 
-/*-------------------------------------------------------------Footer-left*/
+/*---------------------------------------------------------Footer-top */
 
-.order {
-	color: #ffffff;
-	margin: 20px 0 12px;
-	padding: 10px;
-}
-
-.order a {
-	display: inline-block;
-	line-height: 1.8;
-	font-weight: 400;
-	text-decoration: none;
-	color: inherit;
-}
-
-.order:hover {
-	color: #ff9e00;
-}
-
-.footer-company-name {
-	padding: 10px;
-}
-
-
-/*---------------------------------------------------------Footer-center */
-
-.space i {
+.spice i {
 	background-color: #33383b;
 	color: #ffffff;
 	font-size: 25px;
@@ -474,7 +485,7 @@ h4 {
 	vertical-align: middle;
 }
 
-.space a {
+.spice a {
 	color: lightseagreen;
 	text-decoration: none;
 }
@@ -492,4 +503,8 @@ h4 {
 	border-radius: 2px;
 	color: #ffffff;
 	text-align: center;
+}
+
+.footer-company-name {
+	padding: 10px;
 }
